# Core

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Component/: Assembly.h  CMakeLists.txt  Component.h  ComponentDesigner.h  ComponentModel.h  ComponentModelModifier.h  Exception.h  Factory.cpp  Factory.h  IComponent.h  IComponentDesigner.h  IComponentModel.h  IComponentPluginAPI.h
Source/Data/: CMakeLists.txt  DesignRulesDBConnector.cpp  DesignRulesDBConnector.h
Source/Equation/: CMakeLists.txt  Equation.h  Exception.h
Source/Exception/: CMakeLists.txt  Exception.cpp  Exception.h
Source/Parameter/: CMakeLists.txt  Exception.h  IParameter.h  IParameterTagCollection.h  Parameter.h  ParameterContainer.h  ParameterIdentificationGenerator.h  Parameter_IdentificationGenerator.h
Source/SQLiteCpp/: CMakeLists.txt  Database.cpp
Source/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
